--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>Result: {{counter}}</p>
       <input type="text" v-on:input="setname($event, 'Nandanwar')" />
       <p>Your Name: {{name}}</p>
-      <form>
+      <form v-on:submit.prevent="submitForm">
         <input type="text" />
 
         <button>Sign Up</button>
